src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@ws2-wfsA1-spB1.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-2\nwant fullscreen: A1\nset parent: B1"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 0 × 0, bounds: 1900 × 1060, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
